#820 - better translation names for letters N and O, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -734,31 +734,31 @@ my_folders_table.sync=Sync
 my_folders_table.transfer_mode=Transfer Modus
 my_folders_table.total_size=Totale Gr\u00f6sse
 
-navigationbuttons.back=Zur\u00fcck
-navigationbuttons.back_to=Zur\u00fcck zu {0}
-navigationbuttons.forward=Vor
-navigationbuttons.forward_to=Vor zu {0}
-navigationbuttons.up=Hoch
-navigationbuttons.up_to=Hoch zu {0}
+navigation_buttons.back=Zur\u00fcck
+navigation_buttons.back_to=Zur\u00fcck zu {0}
+navigation_buttons.forward=Vor
+navigation_buttons.forward_to=Vor zu {0}
+navigation_buttons.up=Hoch
+navigation_buttons.up_to=Hoch zu {0}
 
-navtree.me=Ich
-navtree.node=Computer {0}
-navtree.onlinenodes=Verbundene Computer ({0})
-navtree.title=Navigation
+nav_tree.me=Ich
+nav_tree.node=Computer {0}
+nav_tree.onlinenodes=Verbundene Computer ({0})
+nav_tree.title=Navigation
 
-networkstatisticspanel.connected_users=Verbundene Computer
-networkstatisticspanel.known_users=Bekannte Computer
-##networkstatisticspanel.local_folder_count=Number of local folders (joined)
-##networkstatisticspanel.local_folders_size=Total size of all local files
-##networkstatisticspanel.number_of_local_files=Total number of local files
-##networkstatisticspanel.number_of_public_files=Total number of available files
-##networkstatisticspanel.online_users=Online users
-##networkstatisticspanel.public_folder_count=Number of public folders (not joined)
-##networkstatisticspanel.public_folders_size=Total size of all available files
-##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
+network_statistics_panel.connected_users=Verbundene Computer
+network_statistics_panel.known_users=Bekannte Computer
+##network_statistics_panel.local_folder_count=Number of local folders (joined)
+##network_statistics_panel.local_folders_size=Total size of all local files
+##network_statistics_panel.number_of_local_files=Total number of local files
+##network_statistics_panel.number_of_public_files=Total number of available files
+##network_statistics_panel.online_users=Online users
+##network_statistics_panel.public_folder_count=Number of public folders (not joined)
+##network_statistics_panel.public_folders_size=Total size of all available files
+##network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
 
-nodeinfo.error=Information \u00fcber den Benutzer nicht m\u00f6glich
-nodeinfo.requesting=Erwarte Benutzerinformationen...
+node_info.error=Information \u00fcber den Benutzer nicht m\u00f6glich
+node_info.requesting=Erwarte Benutzerinformationen...
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -768,42 +768,42 @@ notification_handler.ignore.text=Ignorieren
 number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Gesch\u00e4tzte Gr\u00f6\u00dfe\: {0} Dateien ({1})
-onepublicfolder_panel.file_list_not_found=Dateiliste nicht gefunden
-onepublicfolder_panel.no_one_online_found=Kein Mitglied dieses Folders online gefunden, probiere trotzdem...
-onepublicfolder_panel.private=privat
-onepublicfolder_panel.public=\u00f6ffentlich
-onepublicfolder_panel.searching_filelist_in_network=Suche Dateiliste im Netzwerk...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Dies kann bis zu zwei Minuten dauern
-onepublicfolder_panel.unable_to_connect_to_a_source=Kann zu keiner Quelle verbinden
+one_public_folder_panel.estimated_size_in_files=Gesch\u00e4tzte Gr\u00f6\u00dfe\: {0} Dateien ({1})
+one_public_folder_panel.file_list_not_found=Dateiliste nicht gefunden
+one_public_folder_panel.no_one_online_found=Kein Mitglied dieses Folders online gefunden, probiere trotzdem...
+one_public_folder_panel.private=privat
+one_public_folder_panel.public=\u00f6ffentlich
+one_public_folder_panel.searching_filelist_in_network=Suche Dateiliste im Netzwerk...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Dies kann bis zu zwei Minuten dauern
+one_public_folder_panel.unable_to_connect_to_a_source=Kann zu keiner Quelle verbinden
 
 online_storage.account_data=Login fehlgeschlagen. Daten korrekt?
 online_storage.general_error=Problem beim Login\: ({0}).
 
-onlinelabel.connecting=Verbinden
-onlinelabel.connecting.text=Sie sind online, aber nur zu wenigen Benutzern verbunden. Bitte warten Sie eine kurze Zeit um vollst\u00e4ndig verbunden zu sein. Falls dies nicht geschieht, lesen Sie die FAQ unter @ http\://www.powerfolder.com
-onlinelabel.disabled=Deaktiviert
-onlinelabel.disabled.text=PowerFolder arbeitet derzeit nicht.
-onlinelabel.offline=Offline
-onlinelabel.offline.text=Sie sind offline und mit keinem PowerFolder Benutzer verbunden
-onlinelabel.online=Online
-onlinelabel.online.text=Sie sind online
+online_label.connecting=Verbinden
+online_label.connecting.text=Sie sind online, aber nur zu wenigen Benutzern verbunden. Bitte warten Sie eine kurze Zeit um vollst\u00e4ndig verbunden zu sein. Falls dies nicht geschieht, lesen Sie die FAQ unter @ http\://www.powerfolder.com
+online_label.disabled=Deaktiviert
+online_label.disabled.text=PowerFolder arbeitet derzeit nicht.
+online_label.offline=Offline
+online_label.offline.text=Sie sind offline und mit keinem PowerFolder Benutzer verbunden
+online_label.online=Online
+online_label.online.text=Sie sind online
 
 open_local_folder.description=\u00d6ffnet das lokale Verzeichnis im Explorer
 open_local_folder.key=V
 open_local_folder.name=Verzeichnis \u00f6ffnen
 
-openchat.description=\u00d6ffnet das Chatfenster
-openchat.key=c
-openchat.name=Chat
+open_chat.description=\u00d6ffnet das Chatfenster
+open_chat.key=c
+open_chat.name=Chat
 
-openfile.description=\u00d6ffnet die angew\u00e4hlte Datei
-openfile.key=\u00f6
-openfile.name=Datei \u00f6ffnen
+open_file.description=\u00d6ffnet die angew\u00e4hlte Datei
+open_file.key=\u00f6
+open_file.name=Datei \u00f6ffnen
 
-openwebservice.description=\u00d6ffnet den Online Speicher im Webbrowser
-openwebservice.key=B
-openwebservice.name=Browser \u00f6ffnen
+open_web_service.description=\u00d6ffnet den Online Speicher im Webbrowser
+open_web_service.key=B
+open_web_service.name=Browser \u00f6ffnen
 
 percent.place.holder={0} %
 
