--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -674,31 +674,31 @@ my_folders_table.new_files=New Files
 
 my_folders_panel.hide_previews=Hide preview folders
 
-navigationbuttons.back=Back
-navigationbuttons.back_to=Back to {0}
-navigationbuttons.forward=Forward
-navigationbuttons.forward_to=Forward to {0}
-navigationbuttons.up=Up
-navigationbuttons.up_to=Up to {0}
+navigation_buttons.back=Back
+navigation_buttons.back_to=Back to {0}
+navigation_buttons.forward=Forward
+navigation_buttons.forward_to=Forward to {0}
+navigation_buttons.up=Up
+navigation_buttons.up_to=Up to {0}
 
-navtree.me=me
-navtree.node=Node {0}
-navtree.onlinenodes=Connected Users ({0})
-navtree.title=Navigation
+nav_tree.me=me
+nav_tree.node=Node {0}
+nav_tree.onlinenodes=Connected Users ({0})
+nav_tree.title=Navigation
 
-networkstatisticspanel.connected_users=Connected users
-networkstatisticspanel.known_users=Known users
-networkstatisticspanel.local_folder_count=Number of local folders (joined)
-networkstatisticspanel.local_folders_size=Total size of all local files
-networkstatisticspanel.number_of_local_files=Total number of local files
-networkstatisticspanel.number_of_public_files=Total number of available files
-networkstatisticspanel.online_users=Online users
-networkstatisticspanel.public_folder_count=Number of public folders (not joined)
-networkstatisticspanel.public_folders_size=Total size of all available files
-networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
+network_statistics_panel.connected_users=Connected users
+network_statistics_panel.known_users=Known users
+network_statistics_panel.local_folder_count=Number of local folders (joined)
+network_statistics_panel.local_folders_size=Total size of all local files
+network_statistics_panel.number_of_local_files=Total number of local files
+network_statistics_panel.number_of_public_files=Total number of available files
+network_statistics_panel.online_users=Online users
+network_statistics_panel.public_folder_count=Number of public folders (not joined)
+network_statistics_panel.public_folders_size=Total size of all available files
+network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
 
-nodeinfo.error=Unable to request node information
-nodeinfo.requesting=Requesting node information...
+node_info.error=Unable to request node information
+node_info.requesting=Requesting node information...
 
 notification_handler.display.text=Display
 notification_handler.ignore.text=Ignore
@@ -707,23 +707,23 @@ notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
 number_format.number=#,###,###,###.##
 number_format.long=#,###,###,###
-onepublicfolder_panel.estimated_size_in_files=Estimated size\: {0} files ({1})
-onepublicfolder_panel.file_list_not_found=File list not found
-onepublicfolder_panel.no_one_online_found=No one online found for this folder, will try anyway
-onepublicfolder_panel.private=private
-onepublicfolder_panel.public=public
-onepublicfolder_panel.searching_filelist_in_network=Searching file list in network ...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=This may take up to 2 minutes
-onepublicfolder_panel.unable_to_connect_to_a_source=Unable to connect to a source
+one_public_folder_panel.estimated_size_in_files=Estimated size\: {0} files ({1})
+one_public_folder_panel.file_list_not_found=File list not found
+one_public_folder_panel.no_one_online_found=No one online found for this folder, will try anyway
+one_public_folder_panel.private=private
+one_public_folder_panel.public=public
+one_public_folder_panel.searching_filelist_in_network=Searching file list in network ...
+one_public_folder_panel.this_may_take_up_to_2_minutes=This may take up to 2 minutes
+one_public_folder_panel.unable_to_connect_to_a_source=Unable to connect to a source
 
-onlinelabel.connecting=Connecting
-onlinelabel.connecting.text=You are online, but connected to very few users. Wait a short time to get fully connected. If still not, read the FAQ @ http\://www.powerfolder.com
-onlinelabel.disabled=Disabled
-onlinelabel.disabled.text=PowerFolder is currently disabled.
-onlinelabel.offline=Offline
-onlinelabel.offline.text=You are offline. Not connected to any user on the PowerFolder network
-onlinelabel.online=Online
-onlinelabel.online.text=You are online
+online_label.connecting=Connecting
+online_label.connecting.text=You are online, but connected to very few users. Wait a short time to get fully connected. If still not, read the FAQ @ http\://www.powerfolder.com
+online_label.disabled=Disabled
+online_label.disabled.text=PowerFolder is currently disabled.
+online_label.offline=Offline
+online_label.offline.text=You are offline. Not connected to any user on the PowerFolder network
+online_label.online=Online
+online_label.online.text=You are online
 
 online_storage.account_data=Unable to login. Are account details correct?
 online_storage.general_error=There was an error logging in: ({0}).
@@ -732,17 +732,17 @@ open_local_folder.description=Opens folder in your operating systems file explor
 open_local_folder.key=F
 open_local_folder.name=Open Folder
 
-openchat.description=Opens a chat window to the user or to all users of folder
-openchat.key=c
-openchat.name=Chat
+open_chat.description=Opens a chat window to the user or to all users of folder
+open_chat.key=c
+open_chat.name=Chat
 
-openfile.description=Open (Run) selected file
-openfile.key=O
-openfile.name=Open File
+open_file.description=Open (Run) selected file
+open_file.key=O
+open_file.name=Open File
 
-openwebservice.description=Opens the Online Storage in the default browser
-openwebservice.key=B
-openwebservice.name=Open in Browser
+open_web_service.description=Opens the Online Storage in the default browser
+open_web_service.key=B
+open_web_service.name=Open in Browser
 
 percent.place.holder={0}%
 
