--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -668,31 +668,31 @@ my_folders_table.sync=Sinc
 my_folders_table.transfer_mode=Perfil de sincronizaci\u00F3n
 my_folders_table.total_size=Tama\u00F1o total
 
-navigationbuttons.back=Atr\u00E1s
-navigationbuttons.back_to=Atr\u00E1s a {0}
-navigationbuttons.forward=Adelante
-navigationbuttons.forward_to=Adelante a {0}
-navigationbuttons.up=Arriba
-navigationbuttons.up_to=Arriba a {0}
+navigation_buttons.back=Atr\u00E1s
+navigation_buttons.back_to=Atr\u00E1s a {0}
+navigation_buttons.forward=Adelante
+navigation_buttons.forward_to=Adelante a {0}
+navigation_buttons.up=Arriba
+navigation_buttons.up_to=Arriba a {0}
 
-navtree.me=yo
-navtree.node=Nodo {0}
-navtree.onlinenodes=Usuarios conectados ({0})
-navtree.title=Explorar
+nav_tree.me=yo
+nav_tree.node=Nodo {0}
+nav_tree.onlinenodes=Usuarios conectados ({0})
+nav_tree.title=Explorar
 
-networkstatisticspanel.connected_users=Usuarios Conectados
-networkstatisticspanel.known_users=Usuarios Conocidos
-networkstatisticspanel.local_folder_count=N\u00FAmero de carpetas locales (adjuntas)
-networkstatisticspanel.local_folders_size=Tama\u00F1o total de todos los archivos locales
-networkstatisticspanel.number_of_local_files=N\u00FAmero total de archivos locales
-networkstatisticspanel.number_of_public_files=N\u00FAmero total de archivos dispon\u00EDbles
-networkstatisticspanel.online_users=Usuarios en l\u00EDnea
-networkstatisticspanel.public_folder_count=Number of public folders (not joined)
-networkstatisticspanel.public_folders_size=Tama\u00F1o total de todos los archivos dispon\u00EDbles
-networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
+network_statistics_panel.connected_users=Usuarios Conectados
+network_statistics_panel.known_users=Usuarios Conocidos
+network_statistics_panel.local_folder_count=N\u00FAmero de carpetas locales (adjuntas)
+network_statistics_panel.local_folders_size=Tama\u00F1o total de todos los archivos locales
+network_statistics_panel.number_of_local_files=N\u00FAmero total de archivos locales
+network_statistics_panel.number_of_public_files=N\u00FAmero total de archivos dispon\u00EDbles
+network_statistics_panel.online_users=Usuarios en l\u00EDnea
+network_statistics_panel.public_folder_count=Number of public folders (not joined)
+network_statistics_panel.public_folders_size=Tama\u00F1o total de todos los archivos dispon\u00EDbles
+network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
 
-nodeinfo.error=Imposible solicitar informaci\u00F3n del nodo
-nodeinfo.requesting=Solicitando informaci\u00F3n del nodo...
+node_info.error=Imposible solicitar informaci\u00F3n del nodo
+node_info.requesting=Solicitando informaci\u00F3n del nodo...
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -702,42 +702,42 @@ notification_handler.ignore.text=Ignorar
 number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Tama\u00F1o estimado\: {0} archivos ({1})
-onepublicfolder_panel.file_list_not_found=Lista de archivos no encontrada
-onepublicfolder_panel.no_one_online_found=No se encontro a nadie en-linea para esta carpeta, se intentar\u00E1 de todas maneras
-onepublicfolder_panel.private=privado
-onepublicfolder_panel.public=p\u00FAblico
-onepublicfolder_panel.searching_filelist_in_network=Buscando lista de archivos en la red ...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Esto puede demorar hasta 2 minutos
-onepublicfolder_panel.unable_to_connect_to_a_source=No se puede conectar con la fuente
+one_public_folder_panel.estimated_size_in_files=Tama\u00F1o estimado\: {0} archivos ({1})
+one_public_folder_panel.file_list_not_found=Lista de archivos no encontrada
+one_public_folder_panel.no_one_online_found=No se encontro a nadie en-linea para esta carpeta, se intentar\u00E1 de todas maneras
+one_public_folder_panel.private=privado
+one_public_folder_panel.public=p\u00FAblico
+one_public_folder_panel.searching_filelist_in_network=Buscando lista de archivos en la red ...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Esto puede demorar hasta 2 minutos
+one_public_folder_panel.unable_to_connect_to_a_source=No se puede conectar con la fuente
 
 online_storage.account_data=Accesso incorrecto. Favor de verifcar la informacion en la cuenta del usuario.
 online_storage.general_error=Error al dar accesso en \: ({0}).
 
-onlinelabel.connecting=Conectando
-onlinelabel.connecting.text=Est\u00E1 en l\u00EDnea, pero conectado a pocos usuarios. Espere un poco para estar completamente conectado. Si no se llega a conectar, lea el FAQ en http\://www.powerfolder.com
-onlinelabel.disabled=Desabilitado
-onlinelabel.disabled.text=PowerFolder esta desabilitado.
-onlinelabel.offline=Fuera de l\u00EDnea
-onlinelabel.offline.text=Est\u00E1 fuera de l\u00EDnea. No est\u00E1 conectado a otro usuario de la red PowerFolder
-onlinelabel.online=En l\u00EDnea
-onlinelabel.online.text=Est\u00E1 en l\u00EDnea
+online_label.connecting=Conectando
+online_label.connecting.text=Est\u00E1 en l\u00EDnea, pero conectado a pocos usuarios. Espere un poco para estar completamente conectado. Si no se llega a conectar, lea el FAQ en http\://www.powerfolder.com
+online_label.disabled=Desabilitado
+online_label.disabled.text=PowerFolder esta desabilitado.
+online_label.offline=Fuera de l\u00EDnea
+online_label.offline.text=Est\u00E1 fuera de l\u00EDnea. No est\u00E1 conectado a otro usuario de la red PowerFolder
+online_label.online=En l\u00EDnea
+online_label.online.text=Est\u00E1 en l\u00EDnea
 
 open_local_folder.description=Abre una carpeta con el explorador de archivos en su sistema operativo
 open_local_folder.key=F
 open_local_folder.name=Abrir Carpeta
 
-openchat.description=Abre una sala de charla con el usuario o con los usuarios de una carpeta
-openchat.key=c
-openchat.name=Charlar
+open_chat.description=Abre una sala de charla con el usuario o con los usuarios de una carpeta
+open_chat.key=c
+open_chat.name=Charlar
 
-openfile.description=Abrir (Ajecutar) el archivo seleccionado
-openfile.key=O
-openfile.name=Abrir archivo
+open_file.description=Abrir (Ajecutar) el archivo seleccionado
+open_file.key=O
+open_file.name=Abrir archivo
 
-openwebservice.description=Abre el almac\u00E9n en-linea en tu browser(default)
-openwebservice.key=B
-openwebservice.name=Abrir el browser
+open_web_service.description=Abre el almac\u00E9n en-linea en tu browser(default)
+open_web_service.key=B
+open_web_service.name=Abrir el browser
 
 percent.place.holder={0}%
 
