--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -671,31 +671,31 @@ my_folders_table.sync=Sync
 my_folders_table.transfer_mode=Profil de synchronisation
 my_folders_table.total_size=Taille totale
 
-navigationbuttons.back=Retour
-navigationbuttons.back_to=Revenir \u00E0 {0}
-navigationbuttons.forward=Avancer
-navigationbuttons.forward_to=Avancer vers {0}
-navigationbuttons.up=Monter
-navigationbuttons.up_to=Monter \u00E0 {0}
+navigation_buttons.back=Retour
+navigation_buttons.back_to=Revenir \u00E0 {0}
+navigation_buttons.forward=Avancer
+navigation_buttons.forward_to=Avancer vers {0}
+navigation_buttons.up=Monter
+navigation_buttons.up_to=Monter \u00E0 {0}
 
-navtree.me=moi
-navtree.node=Source {0}
-navtree.onlinenodes=Utilisateurs connect\u00E9s ({0})
-navtree.title=Navigation
+nav_tree.me=moi
+nav_tree.node=Source {0}
+nav_tree.onlinenodes=Utilisateurs connect\u00E9s ({0})
+nav_tree.title=Navigation
 
-networkstatisticspanel.connected_users=Utilisateurs connect\u00E9s
-networkstatisticspanel.known_users=Utilisateurs connus
-networkstatisticspanel.local_folder_count=Nombre de dossiers locaux (connect\u00E9s)
-networkstatisticspanel.local_folders_size=Taille totale de tous les fichiers locaux
-networkstatisticspanel.number_of_local_files=Nombre total de fichiers locaux
-networkstatisticspanel.number_of_public_files=Nombre total de fichiers disponibles
-networkstatisticspanel.online_users=Utilisateurs connect\u00E9s
-networkstatisticspanel.public_folder_count=Nombre de dossiers publics (non connect\u00E9s)
-networkstatisticspanel.public_folders_size=Taille totale de tous les dossiers disponibles
-networkstatisticspanel.reconnection_queue_size=Noeud pr\u00E9ents dans la file d'attente de reconnexion
+network_statistics_panel.connected_users=Utilisateurs connect\u00E9s
+network_statistics_panel.known_users=Utilisateurs connus
+network_statistics_panel.local_folder_count=Nombre de dossiers locaux (connect\u00E9s)
+network_statistics_panel.local_folders_size=Taille totale de tous les fichiers locaux
+network_statistics_panel.number_of_local_files=Nombre total de fichiers locaux
+network_statistics_panel.number_of_public_files=Nombre total de fichiers disponibles
+network_statistics_panel.online_users=Utilisateurs connect\u00E9s
+network_statistics_panel.public_folder_count=Nombre de dossiers publics (non connect\u00E9s)
+network_statistics_panel.public_folders_size=Taille totale de tous les dossiers disponibles
+network_statistics_panel.reconnection_queue_size=Noeud pr\u00E9ents dans la file d'attente de reconnexion
 
-nodeinfo.error=Impossible de r\u00E9cup\u00E9rer des informations sur la source
-nodeinfo.requesting=R\u00E9cup\u00E9ration d'information sur la source...
+node_info.error=Impossible de r\u00E9cup\u00E9rer des informations sur la source
+node_info.requesting=R\u00E9cup\u00E9ration d'information sur la source...
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -705,42 +705,42 @@ notification_handler.ignore.text=Ignorer
 number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Taille estim\u00E9e\: {0} fichiers ({1})
-onepublicfolder_panel.file_list_not_found=La liste des fichiers est indisponible
-onepublicfolder_panel.no_one_online_found=Personne de disponible pour ce dossier, essayez plus tard.
-onepublicfolder_panel.private=priv\u00E9
-onepublicfolder_panel.public=public
-onepublicfolder_panel.searching_filelist_in_network=Recherche d'une liste de fichiers sur le r\u00E9seau PowerFolder...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Ceci peut prendre plus de 2 minutes
-onepublicfolder_panel.unable_to_connect_to_a_source=Imposible de se connecter \u00E0 une source
+one_public_folder_panel.estimated_size_in_files=Taille estim\u00E9e\: {0} fichiers ({1})
+one_public_folder_panel.file_list_not_found=La liste des fichiers est indisponible
+one_public_folder_panel.no_one_online_found=Personne de disponible pour ce dossier, essayez plus tard.
+one_public_folder_panel.private=priv\u00E9
+one_public_folder_panel.public=public
+one_public_folder_panel.searching_filelist_in_network=Recherche d'une liste de fichiers sur le r\u00E9seau PowerFolder...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Ceci peut prendre plus de 2 minutes
+one_public_folder_panel.unable_to_connect_to_a_source=Imposible de se connecter \u00E0 une source
 
 online_storage.account_data=Impossible de se connecter. V\u00E9rifier les informations saisies.
 online_storage.general_error=Fichier d'erreurs dans\: ({0}).
 
-onlinelabel.connecting=Connexion en cours
-onlinelabel.connecting.text=Vous \u00EAtes en ligne, mais connect\u00E9s \u00E0 tr\u00E8s peu d'utilisateurs. Patientez quelques instants avant d'\u00EAtre compl\u00E8tement connect\u00E9s. Si cela \u00E9choue, lire la FAQ suivante (Anglais) @ http\://www.powerfolder.com
-onlinelabel.disabled=D\u00E9activ\u00E9 (Utilisation intensive d\u00E9tect\u00E9e)
-onlinelabel.disabled.text=PowerFolder est d\u00E9sactiv\u00E9 en raison d'une utilisation excessive.
-onlinelabel.offline=D\u00E9connect\u00E9
-onlinelabel.offline.text=Vous \u00EAtes d\u00E9connect\u00E9s. Connexion \u00E0 aucun utilisateur sur le r\u00E9seau PowerFolder
-onlinelabel.online=Connect\u00E9
-onlinelabel.online.text=Vous \u00EAtes connect\u00E9s
+online_label.connecting=Connexion en cours
+online_label.connecting.text=Vous \u00EAtes en ligne, mais connect\u00E9s \u00E0 tr\u00E8s peu d'utilisateurs. Patientez quelques instants avant d'\u00EAtre compl\u00E8tement connect\u00E9s. Si cela \u00E9choue, lire la FAQ suivante (Anglais) @ http\://www.powerfolder.com
+online_label.disabled=D\u00E9activ\u00E9 (Utilisation intensive d\u00E9tect\u00E9e)
+online_label.disabled.text=PowerFolder est d\u00E9sactiv\u00E9 en raison d'une utilisation excessive.
+online_label.offline=D\u00E9connect\u00E9
+online_label.offline.text=Vous \u00EAtes d\u00E9connect\u00E9s. Connexion \u00E0 aucun utilisateur sur le r\u00E9seau PowerFolder
+online_label.online=Connect\u00E9
+online_label.online.text=Vous \u00EAtes connect\u00E9s
 
 open_local_folder.description=Ouvrir le dossier via l'explorateur de fichiers
 open_local_folder.key=E
 open_local_folder.name=Explorer le dossier
 
-openchat.description=Ouvrir une fen\u00EAtre de discussion avec l'utilisateur ou avec tous les utilisateurs de ce dossier
-openchat.key=D
-openchat.name=Discussion
+open_chat.description=Ouvrir une fen\u00EAtre de discussion avec l'utilisateur ou avec tous les utilisateurs de ce dossier
+open_chat.key=D
+open_chat.name=Discussion
 
-openfile.description=Ouvrir (ex\u00E9cuter) le fichier s\u00E9lectionn\u00E9
-openfile.key=O
-openfile.name=Ouvrir le fichier
+open_file.description=Ouvrir (ex\u00E9cuter) le fichier s\u00E9lectionn\u00E9
+open_file.key=O
+open_file.name=Ouvrir le fichier
 
-openwebservice.description=Ouvrir le stockage en ligne via le navigateur par d\u00E9faut
-openwebservice.key=B
-openwebservice.name=Ouvrir dans le navigateur
+open_web_service.description=Ouvrir le stockage en ligne via le navigateur par d\u00E9faut
+open_web_service.key=B
+open_web_service.name=Ouvrir dans le navigateur
 
 percent.place.holder={0}%
 
