--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -669,31 +669,31 @@ my_folders_table.sync=Sinc
 my_folders_table.transfer_mode=Profilo di sincronizzazione
 my_folders_table.total_size=Dimensione totale
 
-navigationbuttons.back=Torna
-navigationbuttons.back_to=Torna a {0}
-navigationbuttons.forward=Avanza
-navigationbuttons.forward_to=Avanza a {0}
-navigationbuttons.up=Su
-navigationbuttons.up_to=Su a {0}
+navigation_buttons.back=Torna
+navigation_buttons.back_to=Torna a {0}
+navigation_buttons.forward=Avanza
+navigation_buttons.forward_to=Avanza a {0}
+navigation_buttons.up=Su
+navigation_buttons.up_to=Su a {0}
 
-navtree.me=me
-navtree.node=Nodo {0}
-navtree.onlinenodes=Utenti connessi ({0})
-navtree.title=Navigazione
+nav_tree.me=me
+nav_tree.node=Nodo {0}
+nav_tree.onlinenodes=Utenti connessi ({0})
+nav_tree.title=Navigazione
 
-networkstatisticspanel.connected_users=Utenti connessi
-networkstatisticspanel.known_users=Utenti conosciuti
-networkstatisticspanel.local_folder_count=Numero di cartelle locali (joined)
-networkstatisticspanel.local_folders_size=Dimensione totale di tutti i file locali
-networkstatisticspanel.number_of_local_files=Numero totale di tutti i file locali
-networkstatisticspanel.number_of_public_files=Numero totale di tutti i file disponibili
-networkstatisticspanel.online_users=Utenti online
-networkstatisticspanel.public_folder_count=Numero di cartelle pubbliche (not joined)
-networkstatisticspanel.public_folders_size=Dimensione totale di tutti i file disponibili
-networkstatisticspanel.reconnection_queue_size=Nodi nella coda di riconnessione
+network_statistics_panel.connected_users=Utenti connessi
+network_statistics_panel.known_users=Utenti conosciuti
+network_statistics_panel.local_folder_count=Numero di cartelle locali (joined)
+network_statistics_panel.local_folders_size=Dimensione totale di tutti i file locali
+network_statistics_panel.number_of_local_files=Numero totale di tutti i file locali
+network_statistics_panel.number_of_public_files=Numero totale di tutti i file disponibili
+network_statistics_panel.online_users=Utenti online
+network_statistics_panel.public_folder_count=Numero di cartelle pubbliche (not joined)
+network_statistics_panel.public_folders_size=Dimensione totale di tutti i file disponibili
+network_statistics_panel.reconnection_queue_size=Nodi nella coda di riconnessione
 
-nodeinfo.error=Impossibile richiedere informazioni sul nodo
-nodeinfo.requesting=Richiesta di informazioni al nodo...
+node_info.error=Impossibile richiedere informazioni sul nodo
+node_info.requesting=Richiesta di informazioni al nodo...
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -703,42 +703,42 @@ notification_handler.ignore.text=Ignora
 number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Dimensione stimata\: {0} file ({1})
-onepublicfolder_panel.file_list_not_found=Lista dei file non trovata
-onepublicfolder_panel.no_one_online_found=Non \u00E8 stato trovato niente per questa cartella, proveremo comunque
-onepublicfolder_panel.private=privato
-onepublicfolder_panel.public=pubblico
-onepublicfolder_panel.searching_filelist_in_network=Ricerca della lista dei file nel network ...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Questo potrebbe necessitare pi\u00F9 di 2 minuti
-onepublicfolder_panel.unable_to_connect_to_a_source=Impossibile connettersi alla sorgente
+one_public_folder_panel.estimated_size_in_files=Dimensione stimata\: {0} file ({1})
+one_public_folder_panel.file_list_not_found=Lista dei file non trovata
+one_public_folder_panel.no_one_online_found=Non \u00E8 stato trovato niente per questa cartella, proveremo comunque
+one_public_folder_panel.private=privato
+one_public_folder_panel.public=pubblico
+one_public_folder_panel.searching_filelist_in_network=Ricerca della lista dei file nel network ...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Questo potrebbe necessitare pi\u00F9 di 2 minuti
+one_public_folder_panel.unable_to_connect_to_a_source=Impossibile connettersi alla sorgente
 
 online_storage.account_data=Impossibile effettuare il login. I dati inseriti sono corretti?
 online_storage.general_error=Si \u00E8 verificato un errore effettuando il login in\: ({0}).
 
-onlinelabel.connecting=Connessione
-onlinelabel.connecting.text=Sei online, ma sei ancora connesso a pochi utenti. Attendi un attimo per essere completamente connesso. Se non ancora connesso, leggi le FAQ @ http\://www.powerfolder.com
-onlinelabel.disabled=Disabilitato (Rilevato uso estensivo)
-onlinelabel.disabled.text=PowerFolder \u00E8 attualmente disabilitato poich\u00E9 \u00E8 stato rilevato un uso estensivo.
-onlinelabel.offline=Offline
-onlinelabel.offline.text=Sei offline. Non sei connesso ad alcun utente del network PowerFolder
-onlinelabel.online=Online
-onlinelabel.online.text=Sei online
+online_label.connecting=Connessione
+online_label.connecting.text=Sei online, ma sei ancora connesso a pochi utenti. Attendi un attimo per essere completamente connesso. Se non ancora connesso, leggi le FAQ @ http\://www.powerfolder.com
+online_label.disabled=Disabilitato (Rilevato uso estensivo)
+online_label.disabled.text=PowerFolder \u00E8 attualmente disabilitato poich\u00E9 \u00E8 stato rilevato un uso estensivo.
+online_label.offline=Offline
+online_label.offline.text=Sei offline. Non sei connesso ad alcun utente del network PowerFolder
+online_label.online=Online
+online_label.online.text=Sei online
 
 open_local_folder.description=Apri la cartella nell'eslora risorse del tuo sistema operativo
 open_local_folder.key=a
 open_local_folder.name=Apri la cartella locale
 
-openchat.description=Apri una finestra di chat con l'utente o con tutti gli utenti di una cartella
-openchat.key=c
-openchat.name=Chat
+open_chat.description=Apri una finestra di chat con l'utente o con tutti gli utenti di una cartella
+open_chat.key=c
+open_chat.name=Chat
 
-openfile.description=Apri (Esegui) il file selezionato
-openfile.key=f
-openfile.name=Apri il file
+open_file.description=Apri (Esegui) il file selezionato
+open_file.key=f
+open_file.name=Apri il file
 
-openwebservice.description=Apre l'Online Storage nel browser di default
-openwebservice.key=B
-openwebservice.name=Apre nel Browser
+open_web_service.description=Apre l'Online Storage nel browser di default
+open_web_service.key=B
+open_web_service.name=Apre nel Browser
 
 percent.place.holder={0}%
 
