--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -666,31 +666,31 @@ my_folders_table.sync=\u540C\u671F
 my_folders_table.transfer_mode=\u540C\u671F\u65B9\u5F0F
 my_folders_table.total_size=\u5408\u8A08\u30B5\u30A4\u30BA
 
-navigationbuttons.back=\u623B\u308B
-navigationbuttons.back_to={0} \u3078\u623B\u308B
-navigationbuttons.forward=\u9032\u3080
-navigationbuttons.forward_to={0} \u3078\u9032\u3080
-navigationbuttons.up=\u4E0A\u3078
-navigationbuttons.up_to=\u4E0A\u3078\uFF08{0} \u3078\uFF09
+navigation_buttons.back=\u623B\u308B
+navigation_buttons.back_to={0} \u3078\u623B\u308B
+navigation_buttons.forward=\u9032\u3080
+navigation_buttons.forward_to={0} \u3078\u9032\u3080
+navigation_buttons.up=\u4E0A\u3078
+navigation_buttons.up_to=\u4E0A\u3078\uFF08{0} \u3078\uFF09
 
-navtree.me=\u81EA\u5206
-navtree.node=\u30CE\u30FC\u30C9 {0}
-navtree.onlinenodes=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC ({0})
-navtree.title=\u64CD\u4F5C
+nav_tree.me=\u81EA\u5206
+nav_tree.node=\u30CE\u30FC\u30C9 {0}
+nav_tree.onlinenodes=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC ({0})
+nav_tree.title=\u64CD\u4F5C
 
-networkstatisticspanel.connected_users=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC
-networkstatisticspanel.known_users=\u65E2\u77E5\u30E6\u30FC\u30B6\u30FC
-networkstatisticspanel.local_folder_count=\u30ED\u30FC\u30AB\u30EB\u30D5\u30A9\u30EB\u30C0\u6570\uFF08\u53C2\u52A0\uFF09
-networkstatisticspanel.local_folders_size=\u5168\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u30B5\u30A4\u30BA
-networkstatisticspanel.number_of_local_files=\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u6570
-networkstatisticspanel.number_of_public_files=\u53D6\u5F97\u53EF\u80FD\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u6570
-networkstatisticspanel.online_users=\u30AA\u30F3\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC
-networkstatisticspanel.public_folder_count=\u30D1\u30D6\u30EA\u30C3\u30AF\u30D5\u30A9\u30EB\u30C0\u6570\uFF08\u975E\u53C2\u52A0\uFF09
-networkstatisticspanel.public_folders_size=\u53D6\u5F97\u53EF\u80FD\u5168\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u30B5\u30A4\u30BA
-networkstatisticspanel.reconnection_queue_size=\u518D\u63A5\u7D9A\u9806\u756A\u5F85\u3061\u30CE\u30FC\u30C9\u6570
+network_statistics_panel.connected_users=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC
+network_statistics_panel.known_users=\u65E2\u77E5\u30E6\u30FC\u30B6\u30FC
+network_statistics_panel.local_folder_count=\u30ED\u30FC\u30AB\u30EB\u30D5\u30A9\u30EB\u30C0\u6570\uFF08\u53C2\u52A0\uFF09
+network_statistics_panel.local_folders_size=\u5168\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u30B5\u30A4\u30BA
+network_statistics_panel.number_of_local_files=\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u6570
+network_statistics_panel.number_of_public_files=\u53D6\u5F97\u53EF\u80FD\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u6570
+network_statistics_panel.online_users=\u30AA\u30F3\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC
+network_statistics_panel.public_folder_count=\u30D1\u30D6\u30EA\u30C3\u30AF\u30D5\u30A9\u30EB\u30C0\u6570\uFF08\u975E\u53C2\u52A0\uFF09
+network_statistics_panel.public_folders_size=\u53D6\u5F97\u53EF\u80FD\u5168\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u30B5\u30A4\u30BA
+network_statistics_panel.reconnection_queue_size=\u518D\u63A5\u7D9A\u9806\u756A\u5F85\u3061\u30CE\u30FC\u30C9\u6570
 
-nodeinfo.error=\u30CE\u30FC\u30C9\u60C5\u5831\u3092\u8981\u6C42\u3067\u304D\u307E\u305B\u3093\u3002
-nodeinfo.requesting=\u30CE\u30FC\u30C9\u60C5\u5831\u3092\u8981\u6C42\u3057\u3066\u3044\u307E\u3059...
+node_info.error=\u30CE\u30FC\u30C9\u60C5\u5831\u3092\u8981\u6C42\u3067\u304D\u307E\u305B\u3093\u3002
+node_info.requesting=\u30CE\u30FC\u30C9\u60C5\u5831\u3092\u8981\u6C42\u3057\u3066\u3044\u307E\u3059...
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -700,42 +700,42 @@ notification_handler.ignore.text=\u7121\u8996
 number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=\u6982\u7B97\u30B5\u30A4\u30BA\: {0} \u30D5\u30A1\u30A4\u30EB ({1})
-onepublicfolder_panel.file_list_not_found=\u30D5\u30A1\u30A4\u30EB\u30EA\u30B9\u30C8
-onepublicfolder_panel.no_one_online_found=\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306E\u30AA\u30F3\u30E9\u30A4\u30F3\u53C2\u52A0\u8005\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u304C\u3001\u691C\u7D22\u3092\u8A66\u307F\u307E\u3059\u3002
-onepublicfolder_panel.private=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8
-onepublicfolder_panel.public=\u30D1\u30D6\u30EA\u30C3\u30AF
-onepublicfolder_panel.searching_filelist_in_network=\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u4E0A\u3067\u30D5\u30A1\u30A4\u30EB\u30EA\u30B9\u30C8\u3092\u691C\u7D22\u4E2D...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=\u53D6\u5F97\u306B 2 \u5206\u307B\u3069\u304B\u304B\u308B\u5834\u5408\u304C\u3042\u308A\u307E\u3059\u3002
-onepublicfolder_panel.unable_to_connect_to_a_source=\u30BD\u30FC\u30B9\u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002
+one_public_folder_panel.estimated_size_in_files=\u6982\u7B97\u30B5\u30A4\u30BA\: {0} \u30D5\u30A1\u30A4\u30EB ({1})
+one_public_folder_panel.file_list_not_found=\u30D5\u30A1\u30A4\u30EB\u30EA\u30B9\u30C8
+one_public_folder_panel.no_one_online_found=\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306E\u30AA\u30F3\u30E9\u30A4\u30F3\u53C2\u52A0\u8005\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u304C\u3001\u691C\u7D22\u3092\u8A66\u307F\u307E\u3059\u3002
+one_public_folder_panel.private=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8
+one_public_folder_panel.public=\u30D1\u30D6\u30EA\u30C3\u30AF
+one_public_folder_panel.searching_filelist_in_network=\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u4E0A\u3067\u30D5\u30A1\u30A4\u30EB\u30EA\u30B9\u30C8\u3092\u691C\u7D22\u4E2D...
+one_public_folder_panel.this_may_take_up_to_2_minutes=\u53D6\u5F97\u306B 2 \u5206\u307B\u3069\u304B\u304B\u308B\u5834\u5408\u304C\u3042\u308A\u307E\u3059\u3002
+one_public_folder_panel.unable_to_connect_to_a_source=\u30BD\u30FC\u30B9\u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002
 
 online_storage.account_data=\u30ED\u30B0\u30A4\u30F3\u3067\u304D\u307E\u305B\u3093\u3002\u30A2\u30AB\u30A6\u30F3\u30C8\u306E\u8A73\u7D30\u306F\u6B63\u3057\u3044\u3067\u3059\u304B\uFF1F
 online_storage.general_error=\u30ED\u30B0\u30A4\u30F3\u306B\u30A8\u30E9\u30FC\u767A\u751F\: ({0}).
 
-onlinelabel.connecting=\u63A5\u7D9A\u8A66\u884C\u7D99\u7D9A\u4E2D
-onlinelabel.connecting.text=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u3059\u304C\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC\u304C\u5C11\u306A\u3044\u72B6\u614B\u3067\u3059\u3002\u5B8C\u5168\u306B\u63A5\u7D9A\u3059\u308B\u306B\u306F\u3082\u3046\u5C11\u3057\u304A\u5F85\u3061\u304F\u3060\u3055\u3044\u3002\u72B6\u614B\u304C\u5168\u304F\u5909\u5316\u3057\u306A\u3044\u5834\u5408\u3001\u3053\u3061\u3089\u306E FAQ \u3092\u53C2\u7167\u3057\u3066\u304F\u3060\u3055\u3044\u3002http\://www.powerfolder.com
-onlinelabel.disabled=\u7121\u52B9\u72B6\u614B\uFF08\u904E\u5270\u4F7F\u7528\u3092\u691C\u51FA\uFF09
-onlinelabel.disabled.text=\u904E\u5270\u4F7F\u7528\u304C\u691C\u51FA\u3055\u308C\u305F\u305F\u3081\u3001\u73FE\u5728 PowerFolder \u306F\u7121\u52B9\u72B6\u614B\u3067\u3059\u3002
-onlinelabel.offline=\u30AA\u30D5\u30E9\u30A4\u30F3
-onlinelabel.offline.text=\u73FE\u5728\u30AA\u30D5\u30E9\u30A4\u30F3\u3067\u3059\u3002PowerFolder \u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u4E0A\u306E\u30E6\u30FC\u30B6\u30FC\u306B\u63A5\u7D9A\u3057\u3066\u3044\u307E\u305B\u3093\u3002
-onlinelabel.online=\u30AA\u30F3\u30E9\u30A4\u30F3
-onlinelabel.online.text=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u3059\u3002
+online_label.connecting=\u63A5\u7D9A\u8A66\u884C\u7D99\u7D9A\u4E2D
+online_label.connecting.text=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u3059\u304C\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC\u304C\u5C11\u306A\u3044\u72B6\u614B\u3067\u3059\u3002\u5B8C\u5168\u306B\u63A5\u7D9A\u3059\u308B\u306B\u306F\u3082\u3046\u5C11\u3057\u304A\u5F85\u3061\u304F\u3060\u3055\u3044\u3002\u72B6\u614B\u304C\u5168\u304F\u5909\u5316\u3057\u306A\u3044\u5834\u5408\u3001\u3053\u3061\u3089\u306E FAQ \u3092\u53C2\u7167\u3057\u3066\u304F\u3060\u3055\u3044\u3002http\://www.powerfolder.com
+online_label.disabled=\u7121\u52B9\u72B6\u614B\uFF08\u904E\u5270\u4F7F\u7528\u3092\u691C\u51FA\uFF09
+online_label.disabled.text=\u904E\u5270\u4F7F\u7528\u304C\u691C\u51FA\u3055\u308C\u305F\u305F\u3081\u3001\u73FE\u5728 PowerFolder \u306F\u7121\u52B9\u72B6\u614B\u3067\u3059\u3002
+online_label.offline=\u30AA\u30D5\u30E9\u30A4\u30F3
+online_label.offline.text=\u73FE\u5728\u30AA\u30D5\u30E9\u30A4\u30F3\u3067\u3059\u3002PowerFolder \u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u4E0A\u306E\u30E6\u30FC\u30B6\u30FC\u306B\u63A5\u7D9A\u3057\u3066\u3044\u307E\u305B\u3093\u3002
+online_label.online=\u30AA\u30F3\u30E9\u30A4\u30F3
+online_label.online.text=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3\u3067\u3059\u3002
 
 open_local_folder.description=\u30B7\u30B9\u30C6\u30E0\u65E2\u5B9A\u306E\u30D5\u30A1\u30A4\u30E9\u3067\u30ED\u30FC\u30AB\u30EB\u306E\u5B9F\u30D5\u30A9\u30EB\u30C0\u3092\u958B\u304F
 open_local_folder.key=F
 open_local_folder.name=\u30D5\u30A9\u30EB\u30C0\u3092\u958B\u304F(F)
 
-openchat.description=\u500B\u5225\u30E6\u30FC\u30B6\u30FC\u307E\u305F\u306F\u30D5\u30A9\u30EB\u30C0\u53C2\u52A0\u30E6\u30FC\u30B6\u30FC\u5168\u54E1\u3092\u5BFE\u8C61\u306B\u3057\u305F\u30C1\u30E3\u30C3\u30C8\u30A6\u30A4\u30F3\u30C9\u30A6\u3092\u958B\u304F
-openchat.key=C
-openchat.name=\u30C1\u30E3\u30C3\u30C8(C)
+open_chat.description=\u500B\u5225\u30E6\u30FC\u30B6\u30FC\u307E\u305F\u306F\u30D5\u30A9\u30EB\u30C0\u53C2\u52A0\u30E6\u30FC\u30B6\u30FC\u5168\u54E1\u3092\u5BFE\u8C61\u306B\u3057\u305F\u30C1\u30E3\u30C3\u30C8\u30A6\u30A4\u30F3\u30C9\u30A6\u3092\u958B\u304F
+open_chat.key=C
+open_chat.name=\u30C1\u30E3\u30C3\u30C8(C)
 
-openfile.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\u306E\u5B9F\u884C
-openfile.key=O
-openfile.name=\u30D5\u30A1\u30A4\u30EB\u3092\u958B\u304F(O)
+open_file.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\u306E\u5B9F\u884C
+open_file.key=O
+open_file.name=\u30D5\u30A1\u30A4\u30EB\u3092\u958B\u304F(O)
 
-openwebservice.description=Web\u30B5\u30FC\u30D3\u30B9\u3092\u65E2\u5B9A\u306E\u30D6\u30E9\u30A6\u30B6\u3067\u958B\u304F
-openwebservice.key=B
-openwebservice.name=\u30D6\u30E9\u30A6\u30B6\u3067\u958B\u304F(B)
+open_web_service.description=Web\u30B5\u30FC\u30D3\u30B9\u3092\u65E2\u5B9A\u306E\u30D6\u30E9\u30A6\u30B6\u3067\u958B\u304F
+open_web_service.key=B
+open_web_service.name=\u30D6\u30E9\u30A6\u30B6\u3067\u958B\u304F(B)
 
 percent.place.holder={0}%
 
