--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -669,31 +669,31 @@ my_folders_table.sync=Sync
 my_folders_table.transfer_mode=Sync Profiel
 my_folders_table.total_size=Lokale grote
 
-navigationbuttons.back=Terug
-navigationbuttons.back_to=Terug naar {0}
-navigationbuttons.forward=Vooruit
-navigationbuttons.forward_to=Vooruit naar {0}
-navigationbuttons.up=Omhoog
-navigationbuttons.up_to=Omhoog naar {0}
+navigation_buttons.back=Terug
+navigation_buttons.back_to=Terug naar {0}
+navigation_buttons.forward=Vooruit
+navigation_buttons.forward_to=Vooruit naar {0}
+navigation_buttons.up=Omhoog
+navigation_buttons.up_to=Omhoog naar {0}
 
-navtree.me=Ikzelf
-navtree.node=Gebruiker {0}
-navtree.onlinenodes=Verbonden gebruikers ({0})
-navtree.title=Navigatie
+nav_tree.me=Ikzelf
+nav_tree.node=Gebruiker {0}
+nav_tree.onlinenodes=Verbonden gebruikers ({0})
+nav_tree.title=Navigatie
 
-networkstatisticspanel.connected_users=Verbonden gebruikers
-networkstatisticspanel.known_users=Bekende gebruikers
-networkstatisticspanel.local_folder_count=Aantal lokale folders (lid)
-networkstatisticspanel.local_folders_size=Totale omvang van alle lokale bestanden
-networkstatisticspanel.number_of_local_files=Totaal aantal lokale bestanden
-networkstatisticspanel.number_of_public_files=Totaal aantal beschikbare bestanden
-networkstatisticspanel.online_users=Verbonden gebruikers
-networkstatisticspanel.public_folder_count=Aantal publieke folders (niet lid)
-networkstatisticspanel.public_folders_size=Totale omvang van alle beschikbare bestanden
-##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
+network_statistics_panel.connected_users=Verbonden gebruikers
+network_statistics_panel.known_users=Bekende gebruikers
+network_statistics_panel.local_folder_count=Aantal lokale folders (lid)
+network_statistics_panel.local_folders_size=Totale omvang van alle lokale bestanden
+network_statistics_panel.number_of_local_files=Totaal aantal lokale bestanden
+network_statistics_panel.number_of_public_files=Totaal aantal beschikbare bestanden
+network_statistics_panel.online_users=Verbonden gebruikers
+network_statistics_panel.public_folder_count=Aantal publieke folders (niet lid)
+network_statistics_panel.public_folders_size=Totale omvang van alle beschikbare bestanden
+##network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
 
-nodeinfo.error=Niet mogelijk om gebruiker informatie op te vragen
-nodeinfo.requesting=Vraag om gebruiker informatie...
+node_info.error=Niet mogelijk om gebruiker informatie op te vragen
+node_info.requesting=Vraag om gebruiker informatie...
 
 ##notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -703,42 +703,42 @@ nodeinfo.requesting=Vraag om gebruiker informatie...
 ##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 ##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Geschatte omvang\: {0} bestanden ({1})
-onepublicfolder_panel.file_list_not_found=Bestandenlijst niet gevonden
-onepublicfolder_panel.no_one_online_found=Niemand on-line gevonden voor deze Folder, probeer toch...
-onepublicfolder_panel.private=prive
-onepublicfolder_panel.public=publiek
-onepublicfolder_panel.searching_filelist_in_network=Zoek bestandenlijst in netwerk...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Dit kan tot 2 minuten duren
-onepublicfolder_panel.unable_to_connect_to_a_source=Kan bron niet verbinden
+one_public_folder_panel.estimated_size_in_files=Geschatte omvang\: {0} bestanden ({1})
+one_public_folder_panel.file_list_not_found=Bestandenlijst niet gevonden
+one_public_folder_panel.no_one_online_found=Niemand on-line gevonden voor deze Folder, probeer toch...
+one_public_folder_panel.private=prive
+one_public_folder_panel.public=publiek
+one_public_folder_panel.searching_filelist_in_network=Zoek bestandenlijst in netwerk...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Dit kan tot 2 minuten duren
+one_public_folder_panel.unable_to_connect_to_a_source=Kan bron niet verbinden
 
 ##online_storage.account_data=Unable to login. Are account details correct?
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
-onlinelabel.connecting=Verbinden
-onlinelabel.connecting.text=U bent verbonden, maar met weinig gebruikers. Wacht even zodat uw verbinding compleet is. Als dat niet werkt lees de FAQ @ http\://www.powerfolder.com (engels)
-onlinelabel.disabled=Uitgeschakeld (Intensief gebruikt gedetecteerd)
-onlinelabel.disabled.text=PowerFolder is momenteel uitgeschakeld omdat intensief gebruikt was gedetecteerd
-onlinelabel.offline=Niet verbonden
-onlinelabel.offline.text=Niet verbonden. Niet verbonder met een bebruiker in het PowerFolder netwerk
-onlinelabel.online=Verbonden
-onlinelabel.online.text=U bent verbonden
+online_label.connecting=Verbinden
+online_label.connecting.text=U bent verbonden, maar met weinig gebruikers. Wacht even zodat uw verbinding compleet is. Als dat niet werkt lees de FAQ @ http\://www.powerfolder.com (engels)
+online_label.disabled=Uitgeschakeld (Intensief gebruikt gedetecteerd)
+online_label.disabled.text=PowerFolder is momenteel uitgeschakeld omdat intensief gebruikt was gedetecteerd
+online_label.offline=Niet verbonden
+online_label.offline.text=Niet verbonden. Niet verbonder met een bebruiker in het PowerFolder netwerk
+online_label.online=Verbonden
+online_label.online.text=U bent verbonden
 
 open_local_folder.description=Opent de Map met de verkenner van uw besturingssysteem
 open_local_folder.key=M
 open_local_folder.name=Open Map
 
-openchat.description=Opent een chatscherm met de gebruiker of met alle leden van de folder
-openchat.key=c
-openchat.name=Chat
+open_chat.description=Opent een chatscherm met de gebruiker of met alle leden van de folder
+open_chat.key=c
+open_chat.name=Chat
 
-openfile.description=Open (start) geselecteerd bestand
-openfile.key=O
-openfile.name=Open bestand
+open_file.description=Open (start) geselecteerd bestand
+open_file.key=O
+open_file.name=Open bestand
 
-##openwebservice.description=Opens the Online Storage in the default browser
-openwebservice.key=B
-openwebservice.name=Open in Browser
+##open_web_service.description=Opens the Online Storage in the default browser
+open_web_service.key=B
+open_web_service.name=Open in Browser
 
 ##percent.place.holder={0}%
 
