--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -669,31 +669,31 @@ my_folders_table.sync=Synchronizacja
 my_folders_table.transfer_mode=Profil synchronizacji
 my_folders_table.total_size=Ca\u0142kowity Rozmiar
 
-navigationbuttons.back=Wstecz
-navigationbuttons.back_to=Wstecz do {0}
-navigationbuttons.forward=Dalej
-navigationbuttons.forward_to=Dalej do {0}
-navigationbuttons.up=W g\u00f3r\u0119
-navigationbuttons.up_to=W g\u00f3r\u0119 do {0}
+navigation_buttons.back=Wstecz
+navigation_buttons.back_to=Wstecz do {0}
+navigation_buttons.forward=Dalej
+navigation_buttons.forward_to=Dalej do {0}
+navigation_buttons.up=W g\u00f3r\u0119
+navigation_buttons.up_to=W g\u00f3r\u0119 do {0}
 
-navtree.me=ja
-navtree.node=W\u0119ze\u0142 {0}
-navtree.onlinenodes=Po\u0142\u0105czeni U\u017cytkownicy ({0})
-navtree.title=Nawigacja
+nav_tree.me=ja
+nav_tree.node=W\u0119ze\u0142 {0}
+nav_tree.onlinenodes=Po\u0142\u0105czeni U\u017cytkownicy ({0})
+nav_tree.title=Nawigacja
 
-networkstatisticspanel.connected_users=Po\u0142\u0105czeni u\u017cytkownicy
-networkstatisticspanel.known_users=Rozpoznani u\u017cytkownicy
-networkstatisticspanel.local_folder_count=Liczba lokalnych folder\u00f3w (przy\u0142\u0105czonych)
-networkstatisticspanel.local_folders_size=Ca\u0142kowity rozmiar wszystkich lokalnych plik\u00f3w
-networkstatisticspanel.number_of_local_files=Liczba wszystkich lokalnych plik\u00f3w
-networkstatisticspanel.number_of_public_files=Liczba wszystkich dost\u0119pnych plik\u00f3w
-networkstatisticspanel.online_users=U\u017cytkownicy online
-networkstatisticspanel.public_folder_count=Liczba publicznych folder\u00f3w (nie przy\u0142\u0105czonych)
-networkstatisticspanel.public_folders_size=Ca\u0142kowity rozmiar dost\u0119pnych plik\u00f3w
-networkstatisticspanel.reconnection_queue_size=W\u0119z\u0142y w kolejce do ponownego po\u0142\u0105czenia
+network_statistics_panel.connected_users=Po\u0142\u0105czeni u\u017cytkownicy
+network_statistics_panel.known_users=Rozpoznani u\u017cytkownicy
+network_statistics_panel.local_folder_count=Liczba lokalnych folder\u00f3w (przy\u0142\u0105czonych)
+network_statistics_panel.local_folders_size=Ca\u0142kowity rozmiar wszystkich lokalnych plik\u00f3w
+network_statistics_panel.number_of_local_files=Liczba wszystkich lokalnych plik\u00f3w
+network_statistics_panel.number_of_public_files=Liczba wszystkich dost\u0119pnych plik\u00f3w
+network_statistics_panel.online_users=U\u017cytkownicy online
+network_statistics_panel.public_folder_count=Liczba publicznych folder\u00f3w (nie przy\u0142\u0105czonych)
+network_statistics_panel.public_folders_size=Ca\u0142kowity rozmiar dost\u0119pnych plik\u00f3w
+network_statistics_panel.reconnection_queue_size=W\u0119z\u0142y w kolejce do ponownego po\u0142\u0105czenia
 
-nodeinfo.error=Nie mo\u017cna pobra\u0107 informacji o w\u0119\u017ale
-nodeinfo.requesting=Pobieranie informacji o w\u0119\u017ale...
+node_info.error=Nie mo\u017cna pobra\u0107 informacji o w\u0119\u017ale
+node_info.requesting=Pobieranie informacji o w\u0119\u017ale...
 
 ##notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -703,42 +703,42 @@ nodeinfo.requesting=Pobieranie informacji o w\u0119\u017ale...
 ##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 ##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Szacowany rozmiar\: {0} plik\u00f3w ({1})
-onepublicfolder_panel.file_list_not_found=Lista plik\u00f3w nie zosta\u0142a znaleziona
-onepublicfolder_panel.no_one_online_found=Nie znaleziono nikogo online dla tego folderu, PowerFolder spr\u00f3buje mimo to
-onepublicfolder_panel.private=prywatny
-onepublicfolder_panel.public=publiczny
-onepublicfolder_panel.searching_filelist_in_network=Szukanie listy plik\u00f3w w sieci ...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=To mo\u017ce zaj\u0105\u0107 do 2 minut
-onepublicfolder_panel.unable_to_connect_to_a_source=Po\u0142\u0105czenie ze \u017ar\u00f3d\u0142em nieudane
+one_public_folder_panel.estimated_size_in_files=Szacowany rozmiar\: {0} plik\u00f3w ({1})
+one_public_folder_panel.file_list_not_found=Lista plik\u00f3w nie zosta\u0142a znaleziona
+one_public_folder_panel.no_one_online_found=Nie znaleziono nikogo online dla tego folderu, PowerFolder spr\u00f3buje mimo to
+one_public_folder_panel.private=prywatny
+one_public_folder_panel.public=publiczny
+one_public_folder_panel.searching_filelist_in_network=Szukanie listy plik\u00f3w w sieci ...
+one_public_folder_panel.this_may_take_up_to_2_minutes=To mo\u017ce zaj\u0105\u0107 do 2 minut
+one_public_folder_panel.unable_to_connect_to_a_source=Po\u0142\u0105czenie ze \u017ar\u00f3d\u0142em nieudane
 
 ##online_storage.account_data=Unable to login. Are account details correct?
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
-onlinelabel.connecting=\u0141\u0105czenie
-onlinelabel.connecting.text=Jeste\u015b online, ale po\u0142\u0105czony z ma\u0142\u0105 liczb\u0105 u\u017cytkownik\u00f3w. Poczekaj chwil\u0119 na pe\u0142ne po\u0142\u0105czenie. Je\u015bli nic si\u0119 nie zmieni, przeczytaj FAQ @ http\://www.powerfolder.com
-onlinelabel.disabled=Wy\u0142\u0105czone
-onlinelabel.disabled.text=PowerFolder jest nieaktywny.
-onlinelabel.offline=Roz\u0142\u0105czony
-onlinelabel.offline.text=Jeste\u015b offline. Nie po\u0142\u0105czono z \u017cadnym u\u017cytkownikiem w sieci PowerFolder
-onlinelabel.online=Po\u0142\u0105czony
-onlinelabel.online.text=Jeste\u015b online
+online_label.connecting=\u0141\u0105czenie
+online_label.connecting.text=Jeste\u015b online, ale po\u0142\u0105czony z ma\u0142\u0105 liczb\u0105 u\u017cytkownik\u00f3w. Poczekaj chwil\u0119 na pe\u0142ne po\u0142\u0105czenie. Je\u015bli nic si\u0119 nie zmieni, przeczytaj FAQ @ http\://www.powerfolder.com
+online_label.disabled=Wy\u0142\u0105czone
+online_label.disabled.text=PowerFolder jest nieaktywny.
+online_label.offline=Roz\u0142\u0105czony
+online_label.offline.text=Jeste\u015b offline. Nie po\u0142\u0105czono z \u017cadnym u\u017cytkownikiem w sieci PowerFolder
+online_label.online=Po\u0142\u0105czony
+online_label.online.text=Jeste\u015b online
 
 open_local_folder.description=Otwiera folder w domy\u015blnej przegl\u0105darce plik\u00f3w Twojego systemu operacyjnego
 open_local_folder.key=F
 open_local_folder.name=Otw\u00f3rz Folder
 
-openchat.description=Otwiera okno rozmowy z u\u017cytkownikiem lub ze wszystkimi u\u017cytkownikami folderu
-openchat.key=c
-openchat.name=Chat
+open_chat.description=Otwiera okno rozmowy z u\u017cytkownikiem lub ze wszystkimi u\u017cytkownikami folderu
+open_chat.key=c
+open_chat.name=Chat
 
-openfile.description=Otw\u00f3rz (uruchom) zaznaczony plik
-openfile.key=O
-openfile.name=Otw\u00f3rz Plik
+open_file.description=Otw\u00f3rz (uruchom) zaznaczony plik
+open_file.key=O
+open_file.name=Otw\u00f3rz Plik
 
-openwebservice.description=Otwiera Archiwum Online w domy\u015blnej przegl\u0105darce internetowej
-openwebservice.key=B
-openwebservice.name=Otw\u00f3rz w Przegl\u0105darce
+open_web_service.description=Otwiera Archiwum Online w domy\u015blnej przegl\u0105darce internetowej
+open_web_service.key=B
+open_web_service.name=Otw\u00f3rz w Przegl\u0105darce
 
 percent.place.holder={0}%
 
