--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -669,31 +669,31 @@ my_folders_table.number_of_members={0} medlemmar
 my_folders_table.transfer_mode=Synk profil
 my_folders_table.total_size=Total storlek
 
-navigationbuttons.back=Backa
-navigationbuttons.back_to=Backa till {0}
-navigationbuttons.forward=Fram\u00e5t
-navigationbuttons.forward_to=Fram\u00e5t till {0}
-navigationbuttons.up=Upp
-navigationbuttons.up_to=Upp till {0}
+navigation_buttons.back=Backa
+navigation_buttons.back_to=Backa till {0}
+navigation_buttons.forward=Fram\u00e5t
+navigation_buttons.forward_to=Fram\u00e5t till {0}
+navigation_buttons.up=Upp
+navigation_buttons.up_to=Upp till {0}
 
-navtree.me=Jag
-navtree.node=Nod {0}
-navtree.onlinenodes=Anslutna anv\u00e4ndare ({0})
-navtree.title=Navigering
+nav_tree.me=Jag
+nav_tree.node=Nod {0}
+nav_tree.onlinenodes=Anslutna anv\u00e4ndare ({0})
+nav_tree.title=Navigering
 
-networkstatisticspanel.connected_users=Anslutna anv\u00e4ndare
-networkstatisticspanel.known_users=K\u00e4nda anv\u00e4ndare
-networkstatisticspanel.local_folder_count=Antal lokala foldrar (du \u00e4r med i)
-networkstatisticspanel.local_folders_size=Total storlek av alla lokala filer
-networkstatisticspanel.number_of_local_files=Totalt antal lokala filer
-networkstatisticspanel.number_of_public_files=Totalt antal tillg\u00e4ngliga filer 
-networkstatisticspanel.online_users=Anv\u00e4ndare nline
-networkstatisticspanel.public_folder_count=Antal offentliga foldrar (du ej \u00e4r med i)
-networkstatisticspanel.public_folders_size=Total storlek av alla tillg\u00e4ngliga filer
-##networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
+network_statistics_panel.connected_users=Anslutna anv\u00e4ndare
+network_statistics_panel.known_users=K\u00e4nda anv\u00e4ndare
+network_statistics_panel.local_folder_count=Antal lokala foldrar (du \u00e4r med i)
+network_statistics_panel.local_folders_size=Total storlek av alla lokala filer
+network_statistics_panel.number_of_local_files=Totalt antal lokala filer
+network_statistics_panel.number_of_public_files=Totalt antal tillg\u00e4ngliga filer
+network_statistics_panel.online_users=Anv\u00e4ndare nline
+network_statistics_panel.public_folder_count=Antal offentliga foldrar (du ej \u00e4r med i)
+network_statistics_panel.public_folders_size=Total storlek av alla tillg\u00e4ngliga filer
+##network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
 
-nodeinfo.error=Kan inte beg\u00e4ra nod-information
-nodeinfo.requesting=Beg\u00e4r nod-information...
+node_info.error=Kan inte beg\u00e4ra nod-information
+node_info.requesting=Beg\u00e4r nod-information...
 
 ##notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -703,42 +703,42 @@ nodeinfo.requesting=Beg\u00e4r nod-information...
 ##number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 ##number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=Uppskattad storlek\: {0} filer ({1})
-onepublicfolder_panel.file_list_not_found=Fillista ej hittad
-onepublicfolder_panel.no_one_online_found=Ingen online hittad f\u00f6r denna folder, f\u00f6rs\u00f6ker \u00e4nd\u00e5
-onepublicfolder_panel.private=Privat
-onepublicfolder_panel.public=Offentlig
-onepublicfolder_panel.searching_filelist_in_network=S\u00f6ker i fillistan p\u00e5 n\u00e4tverket ...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Detta kan ta upp till 2 minuter
-onepublicfolder_panel.unable_to_connect_to_a_source=Kan inte ansluta till k\u00e4llan
+one_public_folder_panel.estimated_size_in_files=Uppskattad storlek\: {0} filer ({1})
+one_public_folder_panel.file_list_not_found=Fillista ej hittad
+one_public_folder_panel.no_one_online_found=Ingen online hittad f\u00f6r denna folder, f\u00f6rs\u00f6ker \u00e4nd\u00e5
+one_public_folder_panel.private=Privat
+one_public_folder_panel.public=Offentlig
+one_public_folder_panel.searching_filelist_in_network=S\u00f6ker i fillistan p\u00e5 n\u00e4tverket ...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Detta kan ta upp till 2 minuter
+one_public_folder_panel.unable_to_connect_to_a_source=Kan inte ansluta till k\u00e4llan
 
 ##online_storage.account_data=Unable to login. Are account details correct?
 ##online_storage.general_error=There was an error logging in\: ({0}).
 
-onlinelabel.connecting=Ansluter
-onlinelabel.connecting.text=Du \u00e4r online, men ansluten till v\u00e4ldigt f\u00e5 anv\u00e4ndare. V\u00e4nta en liten stund f\u00f6r att bli fullt ansluten. Om det inte g\u00e5r, l\u00e4s FAQ @ http\://www.powerfolder.com
-##onlinelabel.disabled=Disabled
-##onlinelabel.disabled.text=PowerFolder is currently disabled.
-onlinelabel.offline=Offline
-onlinelabel.offline.text=Du \u00e4r offline. Inte ansluten till n\u00e5gon annan anv\u00e4ndare i PowerFolder-n\u00e4tverket
-onlinelabel.online=Online
-onlinelabel.online.text=Du \u00e4r online
+online_label.connecting=Ansluter
+online_label.connecting.text=Du \u00e4r online, men ansluten till v\u00e4ldigt f\u00e5 anv\u00e4ndare. V\u00e4nta en liten stund f\u00f6r att bli fullt ansluten. Om det inte g\u00e5r, l\u00e4s FAQ @ http\://www.powerfolder.com
+##online_label.disabled=Disabled
+##online_label.disabled.text=PowerFolder is currently disabled.
+online_label.offline=Offline
+online_label.offline.text=Du \u00e4r offline. Inte ansluten till n\u00e5gon annan anv\u00e4ndare i PowerFolder-n\u00e4tverket
+online_label.online=Online
+online_label.online.text=Du \u00e4r online
 
 open_local_folder.description=\u00d6ppnar foldern i utforskaren p\u00e5 din dators operativsystem
 open_local_folder.key=F
 open_local_folder.name=\u00d6ppna folder
 
-openchat.description=\u00d6ppnar ett chatt-f\u00f6nster till anv\u00e4ndaren eller till alla anv\u00e4ndare av foldern 
-openchat.key=c
-openchat.name=Chatt
+open_chat.description=\u00d6ppnar ett chatt-f\u00f6nster till anv\u00e4ndaren eller till alla anv\u00e4ndare av foldern
+open_chat.key=c
+open_chat.name=Chatt
 
-openfile.description=\u00d6ppna (K\u00f6r) den valda filen
-openfile.key=K
-openfile.name=\u00d6ppna/K\u00f6r fil
+open_file.description=\u00d6ppna (K\u00f6r) den valda filen
+open_file.key=K
+open_file.name=\u00d6ppna/K\u00f6r fil
 
-##openwebservice.description=Opens the Online Storage in the default browser
-##openwebservice.key=B
-##openwebservice.name=Open in Browser
+##open_web_service.description=Opens the Online Storage in the default browser
+##open_web_service.key=B
+##open_web_service.name=Open in Browser
 
 ##percent.place.holder={0}%
 
