--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -668,31 +668,31 @@ my_folders_table.sync=\u540c\u6b65
 my_folders_table.transfer_mode=\u540c\u6b65\u9009\u9879
 my_folders_table.total_size=\u603b\u5927\u5c0f
 
-navigationbuttons.back=\u540e\u9000
-navigationbuttons.back_to=\u540e\u9000\u5230 {0}
-navigationbuttons.forward=\u524d\u8fdb
-navigationbuttons.forward_to=\u524d\u8fdb\u5230 {0}
-navigationbuttons.up=\u5411\u4e0a
-navigationbuttons.up_to=\u5411\u4e0a\u5230 {0}
+navigation_buttons.back=\u540e\u9000
+navigation_buttons.back_to=\u540e\u9000\u5230 {0}
+navigation_buttons.forward=\u524d\u8fdb
+navigation_buttons.forward_to=\u524d\u8fdb\u5230 {0}
+navigation_buttons.up=\u5411\u4e0a
+navigation_buttons.up_to=\u5411\u4e0a\u5230 {0}
 
-navtree.me=\u6211
-navtree.node=\u7528\u6237 {0}
-navtree.onlinenodes=\u8fde\u63a5\u7684\u7528\u6237 ({0})
-navtree.title=\u5bfc\u822a
+nav_tree.me=\u6211
+nav_tree.node=\u7528\u6237 {0}
+nav_tree.onlinenodes=\u8fde\u63a5\u7684\u7528\u6237 ({0})
+nav_tree.title=\u5bfc\u822a
 
-networkstatisticspanel.connected_users=\u8fde\u63a5\u7684\u7528\u6237
-networkstatisticspanel.known_users=\u5df2\u77e5\u7528\u6237
-networkstatisticspanel.local_folder_count=\u672c\u5730\u6587\u4ef6\u5939\uff08\u52a0\u5165\u7684\uff09\u603b\u6570
-networkstatisticspanel.local_folders_size=\u672c\u5730\u6587\u4ef6\u603b\u5927\u5c0f
-networkstatisticspanel.number_of_local_files=\u672c\u5730\u6587\u4ef6\u603b\u6570
-networkstatisticspanel.number_of_public_files=\u6709\u6548\u6587\u4ef6\u603b\u6570
-networkstatisticspanel.online_users=\u5728\u7ebf\u7528\u6237
-networkstatisticspanel.public_folder_count=\u516c\u5f00\u6587\u4ef6\u5939\uff08\u672a\u52a0\u5165\u7684\uff09\u603b\u6570
-networkstatisticspanel.public_folders_size=\u6709\u6548\u6587\u4ef6\u603b\u5927\u5c0f
-networkstatisticspanel.reconnection_queue_size=\u8282\u70b9\u5728\u91cd\u65b0\u8fde\u63a5\u961f\u5217\u4e2d
+network_statistics_panel.connected_users=\u8fde\u63a5\u7684\u7528\u6237
+network_statistics_panel.known_users=\u5df2\u77e5\u7528\u6237
+network_statistics_panel.local_folder_count=\u672c\u5730\u6587\u4ef6\u5939\uff08\u52a0\u5165\u7684\uff09\u603b\u6570
+network_statistics_panel.local_folders_size=\u672c\u5730\u6587\u4ef6\u603b\u5927\u5c0f
+network_statistics_panel.number_of_local_files=\u672c\u5730\u6587\u4ef6\u603b\u6570
+network_statistics_panel.number_of_public_files=\u6709\u6548\u6587\u4ef6\u603b\u6570
+network_statistics_panel.online_users=\u5728\u7ebf\u7528\u6237
+network_statistics_panel.public_folder_count=\u516c\u5f00\u6587\u4ef6\u5939\uff08\u672a\u52a0\u5165\u7684\uff09\u603b\u6570
+network_statistics_panel.public_folders_size=\u6709\u6548\u6587\u4ef6\u603b\u5927\u5c0f
+network_statistics_panel.reconnection_queue_size=\u8282\u70b9\u5728\u91cd\u65b0\u8fde\u63a5\u961f\u5217\u4e2d
 
-nodeinfo.error=\u4e0d\u80fd\u83b7\u53d6\u7528\u6237\u4fe1\u606f
-nodeinfo.requesting=\u83b7\u53d6\u7528\u6237\u4fe1\u606f\u2026\u2026
+node_info.error=\u4e0d\u80fd\u83b7\u53d6\u7528\u6237\u4fe1\u606f
+node_info.requesting=\u83b7\u53d6\u7528\u6237\u4fe1\u606f\u2026\u2026
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
@@ -702,42 +702,42 @@ notification_handler.ignore.text=\u5ffd\u7565
 number_format.long=\#,\#\#\#,\#\#\#,\#\#\#
 number_format.number=\#,\#\#\#,\#\#\#,\#\#\#.\#\#
 
-onepublicfolder_panel.estimated_size_in_files=\u4f30\u8ba1\u5927\u5c0f\uff1a {0} \u4e2a\u6587\u4ef6 ({1})
-onepublicfolder_panel.file_list_not_found=\u672a\u53d1\u73b0\u6587\u4ef6\u5217\u8868
-onepublicfolder_panel.no_one_online_found=\u8be5\u6587\u4ef6\u5939\u76ee\u524d\u65e0\u4eba\u5728\u7ebf\uff0c\u5c06\u91cd\u8bd5
-onepublicfolder_panel.private=\u79c1\u6709
-onepublicfolder_panel.public=\u516c\u5171
-onepublicfolder_panel.searching_filelist_in_network=\u6b63\u5728\u7f51\u7edc\u4e0a\u67e5\u627e\u6587\u4ef6\u5217\u8868\u2026\u2026
-onepublicfolder_panel.this_may_take_up_to_2_minutes=\u9700\u89812\u5206\u949f\u5de6\u53f3\u65f6\u95f4
-onepublicfolder_panel.unable_to_connect_to_a_source=\u4e0d\u80fd\u8fde\u63a5\u5230\u6e90
+one_public_folder_panel.estimated_size_in_files=\u4f30\u8ba1\u5927\u5c0f\uff1a {0} \u4e2a\u6587\u4ef6 ({1})
+one_public_folder_panel.file_list_not_found=\u672a\u53d1\u73b0\u6587\u4ef6\u5217\u8868
+one_public_folder_panel.no_one_online_found=\u8be5\u6587\u4ef6\u5939\u76ee\u524d\u65e0\u4eba\u5728\u7ebf\uff0c\u5c06\u91cd\u8bd5
+one_public_folder_panel.private=\u79c1\u6709
+one_public_folder_panel.public=\u516c\u5171
+one_public_folder_panel.searching_filelist_in_network=\u6b63\u5728\u7f51\u7edc\u4e0a\u67e5\u627e\u6587\u4ef6\u5217\u8868\u2026\u2026
+one_public_folder_panel.this_may_take_up_to_2_minutes=\u9700\u89812\u5206\u949f\u5de6\u53f3\u65f6\u95f4
+one_public_folder_panel.unable_to_connect_to_a_source=\u4e0d\u80fd\u8fde\u63a5\u5230\u6e90
 
 online_storage.account_data=\u4e0d\u80fd\u767b\u5f55\u3002\u8d26\u53f7\u662f\u5426\u6b63\u786e\uff1f
 online_storage.general_error=\u767b\u5f55\u65f6\u53d1\u751f\u9519\u8bef\uff1a ({0}).
 
-onlinelabel.connecting=\u8fde\u63a5\u4e2d
-onlinelabel.connecting.text=\u4f60\u5df2\u7ecf\u5728\u7ebf\uff0c\u4f46\u8fde\u63a5\u7684\u7528\u6237\u5f88\u5c11\u3002\u7a0d\u7b49\u4ee5\u4fbf\u5b8c\u5168\u8fde\u63a5\u3002\u5982\u679c\u4ecd\u7136\u4e0d\u884c\uff0c\u53c2\u89c1\u7591\u96be\u89e3\u8bfb http\://www.powerfolder.com
-onlinelabel.disabled=\u7981\u7528 (\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528)
-onlinelabel.disabled.text=\u7531\u4e8e\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528\uff0cPowerFolder\u5df2\u88ab\u7981\u7528\u3002
-onlinelabel.offline=\u79bb\u7ebf
-onlinelabel.offline.text=\u4f60\u76ee\u524d\u79bb\u7ebf\u3002\u6ca1\u6709\u548cPowerFolder\u7684\u7528\u6237\u8fde\u63a5
-onlinelabel.online=\u5728\u7ebf
-onlinelabel.online.text=\u4f60\u76ee\u524d\u5728\u7ebf
+online_label.connecting=\u8fde\u63a5\u4e2d
+online_label.connecting.text=\u4f60\u5df2\u7ecf\u5728\u7ebf\uff0c\u4f46\u8fde\u63a5\u7684\u7528\u6237\u5f88\u5c11\u3002\u7a0d\u7b49\u4ee5\u4fbf\u5b8c\u5168\u8fde\u63a5\u3002\u5982\u679c\u4ecd\u7136\u4e0d\u884c\uff0c\u53c2\u89c1\u7591\u96be\u89e3\u8bfb http\://www.powerfolder.com
+online_label.disabled=\u7981\u7528 (\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528)
+online_label.disabled.text=\u7531\u4e8e\u68c0\u6d4b\u5230\u8fc7\u5ea6\u4f7f\u7528\uff0cPowerFolder\u5df2\u88ab\u7981\u7528\u3002
+online_label.offline=\u79bb\u7ebf
+online_label.offline.text=\u4f60\u76ee\u524d\u79bb\u7ebf\u3002\u6ca1\u6709\u548cPowerFolder\u7684\u7528\u6237\u8fde\u63a5
+online_label.online=\u5728\u7ebf
+online_label.online.text=\u4f60\u76ee\u524d\u5728\u7ebf
 
 open_local_folder.description=\u5728\u8d44\u6e90\u5904\u7406\u5668\u4e2d\u6253\u5f00
 open_local_folder.key=F
 open_local_folder.name=\u6253\u5f00\u6587\u4ef6\u5939
 
-openchat.description=\u4e0e\u6587\u4ef6\u5939\u7528\u6237\u804a\u5929
-openchat.key=c
-openchat.name=\u804a\u5929
+open_chat.description=\u4e0e\u6587\u4ef6\u5939\u7528\u6237\u804a\u5929
+open_chat.key=c
+open_chat.name=\u804a\u5929
 
-openfile.description=\u6253\u5f00\uff08\u8fd0\u884c\uff09\u9009\u62e9\u7684\u6587\u4ef6
-openfile.key=O
-openfile.name=\u6253\u5f00\u6587\u4ef6
+open_file.description=\u6253\u5f00\uff08\u8fd0\u884c\uff09\u9009\u62e9\u7684\u6587\u4ef6
+open_file.key=O
+open_file.name=\u6253\u5f00\u6587\u4ef6
 
-openwebservice.description=\u5728\u9ed8\u8ba4\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u7f51\u7edc\u670d\u52a1
-openwebservice.key=B
-openwebservice.name=\u5728\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00
+open_web_service.description=\u5728\u9ed8\u8ba4\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u7f51\u7edc\u670d\u52a1
+open_web_service.key=B
+open_web_service.name=\u5728\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00
 
 percent.place.holder={0}%
 
