--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -597,65 +597,65 @@ my_folders_table.sync=Sincronizar
 my_folders_table.transfer_mode=Perfil de Sincroniza\u00e7\u00e3o
 my_folders_table.total_size=Tamanho Total
 
-navigationbuttons.back=Voltar
-navigationbuttons.back_to=Voltar para {0}
-navigationbuttons.forward=Avan\u00e7ar
-navigationbuttons.forward_to=Avan\u00e7ar para {0}
-navigationbuttons.up=Acima
-navigationbuttons.up_to=Acima para {0}
+navigation_buttons.back=Voltar
+navigation_buttons.back_to=Voltar para {0}
+navigation_buttons.forward=Avan\u00e7ar
+navigation_buttons.forward_to=Avan\u00e7ar para {0}
+navigation_buttons.up=Acima
+navigation_buttons.up_to=Acima para {0}
 
-navtree.me=eu
-navtree.node=N\u00f3 {0}
-navtree.onlinenodes=Usu\u00e1rios conectados ({0})
-navtree.title=Navega\u00e7\u00e3o
+nav_tree.me=eu
+nav_tree.node=N\u00f3 {0}
+nav_tree.onlinenodes=Usu\u00e1rios conectados ({0})
+nav_tree.title=Navega\u00e7\u00e3o
 
-networkstatisticspanel.connected_users=Usu\u00e1rios conectados
-networkstatisticspanel.known_users=Usu\u00e1rios conhecidos
-networkstatisticspanel.local_folder_count=N\u00famero de pastas locais (Number of local folders (associado)
-networkstatisticspanel.local_folders_size=Tamanho total dos arquivos locais
-networkstatisticspanel.number_of_local_files=N\u00famero total dos arquivos locais
-networkstatisticspanel.number_of_public_files=N\u00famero total de arquivos dispon\u00edveis
-networkstatisticspanel.online_users=Usu\u00e1rios online
-networkstatisticspanel.public_folder_count=N\u00famero de pastas p\u00fablicas (n\u00e3o associadas)
-networkstatisticspanel.public_folders_size=Tamanho total de todos os arquivos dispon\u00edveis
-networkstatisticspanel.reconnection_queue_size=N\u00f3s na fila de reconex\u00e3o
+network_statistics_panel.connected_users=Usu\u00e1rios conectados
+network_statistics_panel.known_users=Usu\u00e1rios conhecidos
+network_statistics_panel.local_folder_count=N\u00famero de pastas locais (Number of local folders (associado)
+network_statistics_panel.local_folders_size=Tamanho total dos arquivos locais
+network_statistics_panel.number_of_local_files=N\u00famero total dos arquivos locais
+network_statistics_panel.number_of_public_files=N\u00famero total de arquivos dispon\u00edveis
+network_statistics_panel.online_users=Usu\u00e1rios online
+network_statistics_panel.public_folder_count=N\u00famero de pastas p\u00fablicas (n\u00e3o associadas)
+network_statistics_panel.public_folders_size=Tamanho total de todos os arquivos dispon\u00edveis
+network_statistics_panel.reconnection_queue_size=N\u00f3s na fila de reconex\u00e3o
 
-nodeinfo.error=N\u00e3o \u00e9 poss\u00edvel requerer informa\u00e7\u00e3o do n\u00f3
-nodeinfo.requesting=Requisitando informa\u00e7\u00e3o do n\u00f3...
+node_info.error=N\u00e3o \u00e9 poss\u00edvel requerer informa\u00e7\u00e3o do n\u00f3
+node_info.requesting=Requisitando informa\u00e7\u00e3o do n\u00f3...
 
-onepublicfolder_panel.estimated_size_in_files=Tamanho estimado\: {0} files ({1})
-onepublicfolder_panel.file_list_not_found=Lista de arquivos n\u00e3o encontrada
-onepublicfolder_panel.no_one_online_found=Ninguem est\u00e1 online nesta pasta, tentar\u00e1 assim mesmo
-onepublicfolder_panel.private=privado
-onepublicfolder_panel.public=p\u00fablico
-onepublicfolder_panel.searching_filelist_in_network=Procurando lista de arquivos na rede ...
-onepublicfolder_panel.this_may_take_up_to_2_minutes=Isto pode levar at\u00e9 2 minutos
-onepublicfolder_panel.unable_to_connect_to_a_source=N\u00e3o \u00e9 poss\u00edvel conectar-se a uma fonte
+one_public_folder_panel.estimated_size_in_files=Tamanho estimado\: {0} files ({1})
+one_public_folder_panel.file_list_not_found=Lista de arquivos n\u00e3o encontrada
+one_public_folder_panel.no_one_online_found=Ninguem est\u00e1 online nesta pasta, tentar\u00e1 assim mesmo
+one_public_folder_panel.private=privado
+one_public_folder_panel.public=p\u00fablico
+one_public_folder_panel.searching_filelist_in_network=Procurando lista de arquivos na rede ...
+one_public_folder_panel.this_may_take_up_to_2_minutes=Isto pode levar at\u00e9 2 minutos
+one_public_folder_panel.unable_to_connect_to_a_source=N\u00e3o \u00e9 poss\u00edvel conectar-se a uma fonte
 
-onlinelabel.connecting=Conectando
-onlinelabel.connecting.text=Voc\u00ea est\u00e1 online, por\u00e9m est\u00e1 conectado a poucos usu\u00e1rios. Espere um momento para ser totalmente conectado. Se isto n\u00e3o acontecer, leia as perguntas frequentes em http\://www.powerfolder.com
-onlinelabel.disabled=Desativado
-onlinelabel.disabled.text=PowerFolder est\u00e1 desativado no momento.
-onlinelabel.offline=Offline
-onlinelabel.offline.text=Voc\u00ea n\u00e3o est\u00e1 online. N\u00e3o est\u00e1 conectado a nenhum usu\u00e1rio da rede do PowerFolder
-onlinelabel.online=Online
-onlinelabel.online.text=Voc\u00ea est\u00e1 online
+online_label.connecting=Conectando
+online_label.connecting.text=Voc\u00ea est\u00e1 online, por\u00e9m est\u00e1 conectado a poucos usu\u00e1rios. Espere um momento para ser totalmente conectado. Se isto n\u00e3o acontecer, leia as perguntas frequentes em http\://www.powerfolder.com
+online_label.disabled=Desativado
+online_label.disabled.text=PowerFolder est\u00e1 desativado no momento.
+online_label.offline=Offline
+online_label.offline.text=Voc\u00ea n\u00e3o est\u00e1 online. N\u00e3o est\u00e1 conectado a nenhum usu\u00e1rio da rede do PowerFolder
+online_label.online=Online
+online_label.online.text=Voc\u00ea est\u00e1 online
 
 open_local_folder.description=Abre pasta no explorador de arquivos do seu sistema operacional
 open_local_folder.key=P
 open_local_folder.name=Abrir Pasta
 
-openchat.description=Abre uma janela para bate-papo com o usu\u00e1rio ou com todos os usu\u00e1rios da pasta
-openchat.key=b
-openchat.name=Bate-Papo
+open_chat.description=Abre uma janela para bate-papo com o usu\u00e1rio ou com todos os usu\u00e1rios da pasta
+open_chat.key=b
+open_chat.name=Bate-Papo
 
-openfile.description=Abrir (Executar) arquivo selecionado
-openfile.key=A
-openfile.name=Abrir Arquivo
+open_file.description=Abrir (Executar) arquivo selecionado
+open_file.key=A
+open_file.name=Abrir Arquivo
 
-openwebservice.description=Abre o Armazenamento Online no navegador padr\u00e3o
-openwebservice.key=A
-openwebservice.name=Abrir no Navegador
+open_web_service.description=Abre o Armazenamento Online no navegador padr\u00e3o
+open_web_service.key=A
+open_web_service.name=Abrir no Navegador
 
 percent.place.holder={0}%
 
